# MyVulkanRenderer

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  cornell.h  descriptor.h  inputTest.cpp  instancing.cpp  main.cpp  my_appdata.h  my_buffer.h  my_descriptors.h  my_device.h  my_event.h  my_gui.h  my_inputsystem.h  my_instance.h  my_model.h  my_pch.h  my_pipeline.h  my_pipelineConfig.h  my_renderer.h  my_scene.h  my_shader.h  my_sphere.h  my_swapchain.h  my_texture.h  my_window.h  shadowmap.cpp  test.cpp  test.h  understandingVulkanSync.md  yetanothervulkansync.md
.history/: .gitignore_20220719115654  .gitignore_20220719120149  csTest_20220718172357.cpp  csTest_20220718200155.cpp  csTest_20220718200305.cpp  csTest_20220718200704.cpp  csTest_20220718200735.cpp  csTest_20220718215403.cpp  csTest_20220718220937.cpp  csTest_20220718222831.cpp  csTest_20220718223256.cpp  csTest_20220718223625.cpp  csTest_20220718223812.cpp  csTest_20220718224059.cpp  csTest_20220718224112.cpp  csTest_20220718224155.cpp  csTest_20220718224248.cpp  csTest_20220718224253.cpp  csTest_20220718225126.cpp  csTest_20220718225131.cpp  csTest_20220718225924.cpp  csTest_20220718225939.cpp  csTest_20220718230319.cpp  csTest_20220718230330.cpp  csTest_20220719101539.cpp  csTest_20220719102336.cpp  csTest_20220719102453.cpp  csTest_20220719104012.cpp  csTest_20220719111154.cpp  csTest_20220719111209.cpp  csTest_20220719111220.cpp  csTest_20220719112844.cpp  csTest_20220719113422.cpp  csTest_20220719114717.cpp  csTest_20220719114824.cpp  csTest_20220719114830.cpp  csTest_20220719115052.cpp  csTest_20220719115109.cpp  csTest_20220719115116.cpp  csTest_20220719115134.cpp  (+10 more)
core/: camera.h  canvas.h  filter.h  material.h  myrandom.h  object.h  record.h  rng.h  sampler.h
geometry/: aggregates.h  bbox.h  instance.h  mesh.h  primitives.h  ray.h  shapes.h  space.h  transforms.h  utils.h
implement/: mesh.inpl
shaders/: a.frag  a.vert  compile.bat  compile.sh  frag_a.spv  vert_a.spv
src/: my_buffer.cpp  my_descriptors.cpp  my_pipeline.cpp  (+3 more)
(+24 files in other folders)
